# fastgmad

./: .editorconfig  .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml
benches/: create_gma_benchmark.rs
fastgmad-bin/: Cargo.toml  build.rs
fastgmad-bin/src/: main.rs  usage.txt
fastgmad-lib/: Cargo.toml
fastgmad-lib/src/: conf.rs  error.rs  lib.rs  tests.rs  util.rs  whitelist.rs
fastgmad-lib/src/binary/: args.rs  conf.rs  mod.rs  progress.rs
fastgmad-lib/src/create/: conf.rs  mod.rs
fastgmad-lib/src/extract/: conf.rs  mod.rs
fastgmad-lib/src/workshop/: conf.rs  mod.rs
fastgmad-publish/: Cargo.toml
fastgmad-publish/src/: lib.rs  shared.rs
src/: lib.rs  main.rs  tests.rs  usage.txt  util.rs  whitelist.rs
src/create/: conf.rs  mod.rs  parallel.rs  standard.rs
src/extract/: conf.rs  mod.rs  parallel.rs  standard.rs
src/tests/: create_gma.rs
src/workshop/: conf.rs  mod.rs
