[package]
name = "fastgmad"
version = "0.1.0"
edition = "2021"
authors = ["William Venner <william@venner.io>"]
license = "MIT OR Apache-2.0"
description = "Fast gmad and gmpublisher implementation"
repository = "https://github.com/WilliamVenner/fastgmad"
publish = false

[lib]
bench = false

[[bin]]
name = "fastgmad"
path = "src/main.rs"
bench = false

[[bench]]
name = "create_gma_benchmark"
harness = false

[dependencies]
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = { version = "1", features = ["backtrace"] }
memchr = "2"
byteorder = "1"

[dev-dependencies]
lazy_static = "1"
criterion = { version = "0.5", features = ["html_reports"] }
uuid = { version = "1", features = ["v4"] }
sysreq = "0.1"
zip = "0.6"
