[package]
name = "fastgmad"
version = "0.1.0"
edition = "2021"
authors = ["William Venner <william@venner.io>"]
license = "MIT OR Apache-2.0"
description = "Fast gmad and gmpublisher implementation"
repository = "https://github.com/WilliamVenner/fastgmad"

[profile.release]
lto = "thin"
codegen-units = 1

[features]
default = []
binary = []
workshop = ["dep:steamworks"]

[lib]
bench = false

[[bin]]
name = "fastgmad"
path = "src/main.rs"
bench = false
required-features = ["binary", "workshop"]

[[bench]]
name = "create_gma_benchmark"
harness = false

[dependencies]
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = { version = "1", features = ["backtrace"] }
memchr = "2"
byteorder = "1"
steamworks = { version = "0.9", optional = true }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
pretty_env_logger = "0.5"

[dev-dependencies]
lazy_static = "1"
criterion = "0.5"
