[package]
name = "fastgmad"
version = "0.1.0"
edition = "2021"
authors = ["William Venner <william@venner.io>"]
license = "MIT OR Apache-2.0"
description = "Fast gmad and gmpublish implementation"
repository = "https://github.com/WilliamVenner/fastgmad"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "debuginfo"

[features]
binary = []
workshop = ["dep:steamworks"]

[[bin]]
name = "fastgmad"
path = "src/main.rs"
required-features = ["binary", "workshop"]

[dependencies]
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = { version = "1", features = ["backtrace"] }
memchr = "2"
byteorder = "1"
steamworks = { version = "0.9", optional = true }
uuid = { version = "1", features = ["v4"] }
log = "0.4"

[dev-dependencies]
lazy_static = "1"
