[package]
name = "fastgmad-bin"
version = "0.1.0"
edition = "2021"
authors = ["William Venner <william@venner.io>"]
license = "MIT OR Apache-2.0"
description = "Fast gmad and gmpublish implementation"
repository = "https://github.com/WilliamVenner/fastgmad"
publish = false

[[bin]]
name = "fastgmad"
path = "src/main.rs"

[dependencies]
fastgmad = { path = "../fastgmad-lib", features = ["binary"] }
