[package]
name = "fastgmad"
version = "0.1.3"
edition = "2021"
authors = ["William Venner <william@venner.io>"]
license = "MIT OR Apache-2.0"
description = "Fast gmad and gmpublish implementation"
repository = "https://github.com/WilliamVenner/fastgmad"

[features]
binary = ["dep:libloading", "dep:ctrlc", "dep:steamworks"]
workshop = ["dep:fastgmad-publish", "dep:steamworks"]

[dependencies]
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memchr = "2"
byteorder = "1"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
thiserror = "1"

# `binary` dependencies
ctrlc = { version = "3", optional = true }
libloading = { version = "0.8", optional = true }

# `workshop` dependencies
fastgmad-publish = { path = "../fastgmad-publish", optional = true }
steamworks = { version = "0.10", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["stringapiset"] }

[dev-dependencies]
lazy_static = "1"
sysreq = "0.1.6"
zip = "0.6"
