[package]
name = "fastgmad-publish"
version = "0.1.0"
edition = "2021"
authors = ["William Venner <william@venner.io>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/WilliamVenner/fastgmad"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
binary = []

[dependencies]
steamworks = "0.10"
